--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,25 +2,25 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.0"
-
+    buildToolsVersion "23.0.2"
     defaultConfig {
         applicationId "org.udoo.udoodroidcondemo"
         minSdkVersion 12
-        targetSdkVersion 23
+        targetSdkVersion 19
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.0.1'
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.android.support:appcompat-v7:23.1.1'
     compile files('libs/adktoolkit-0.2.0.jar')
 }
